--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-native": "0.62.2",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-fs": "^2.16.6",
-    "react-native-sensors": "^6.0.2"
+    "react-native-sensors": "^6.0.2",
+    "react-native-zendesk": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
