--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-fetch-blob": "^0.10.8",
     "react-native-fs": "^2.16.6",
     "react-native-sensors": "^6.0.2",
+    "react-native-wifi-p2p": "^2.0.2",
     "react-native-zendesk": "^2.1.0"
   },
   "devDependencies": {
